<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/bg_color">

    <!-- Back Button Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/actor"
            android:text="@string/back" />
    </LinearLayout>

    <!-- Title Text -->
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:layout_marginStart="-50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_phone_number_10_to_get_verified" />

    <!-- Subtitle Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comm"
        android:textSize="14sp"
        android:fontFamily="@font/actor"
        android:textColor="@color/gray"
        android:layout_marginStart="-50dp"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <!-- Phone Number Input Section -->
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Country Flag -->
        <ImageView
            android:id="@+id/img_email"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/email"
            android:contentDescription="@string/country_flag" />

        <!-- Phone Number Input -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="Your email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Blue Line -->
    <View
        android:id="@+id/blue_line1"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Country Flag -->
        <ImageView
            android:id="@+id/img_password"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/password"
            android:contentDescription="@string/country_flag" />

        <!-- Phone Number Input -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="Your password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Blue Line -->
    <View
        android:id="@+id/blue_line"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Next Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:text="Next"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="16sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
